black canvas added

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@ body {
   background: lightgray;
 }
 
+#networkCanvas {
+  background-color: black;
+}
+
 .header-container {
   background-color: #03a9f4;
   max-width: 60%;
