--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,12 @@
-body {
+main {
   margin: 0;
   background: #cdeef6;
   overflow: hidden;
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -26,4 +30,24 @@ body {
 
 .header {
   padding: 0.4rem;
+}
+
+.verticalButtons {
+  display: flex;
+  flex-direction: column;
+  height: 10%;
+  justify-content: space-evenly;
+  margin-left: 30px;
+}
+
+button {
+  border: none;
+  border-radius: 1rem;
+  padding: 10px 10px 10px 10px;
+  margin: 2px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: blue;
 }
